gcc/testsuite/gcc.target/mips/abi-o32-long64-pic.c
/* { dg-options "-mabi=32 -mlong64 -fpic" } */
/* { dg-error "is incompatible with" "" { target *-*-* } 0 } */
#include "abi-main.h"
